Fix the password reset form and possible resolver issue
While testing for everything open I noticed two possible
issues. This PR fixes both.

The first is a possible recursion in the resolver. I think
I need to fix up it's transactions a bit in another PR.

The second was that the submit button on the reset form
doesn't work. This fixes that as well as post reset redirecting
to the correct location.

--- a/server/core/templates/credentials_update_primary.html
+++ b/server/core/templates/credentials_update_primary.html
@@ -42,7 +42,7 @@
                         </div>
                     </div>
                     <div>
-                        <button type="button" class="btn btn-outline-danger" hx-post="/ui/api/delete_alt_creds" hx-confirm="Delete your Password and any associated MFA?\nNote: this will not remove Passkeys.">
+                        <button type="button" class="btn btn-outline-danger" hx-post="/ui/api/delete_alt_creds" hx-confirm="Delete your Password and any associated alternative authentication methods? NOTE: this will not remove Passkeys.">
                             Delete Alternative Credentials
                         </button>
                     </div>
