--- a/server/core/templates/credentials_reset_form.html
+++ b/server/core/templates/credentials_reset_form.html
@@ -56,10 +56,9 @@
             Return to the home page
         </button>
         <button class="btn btn-primary"
-            hx-get=(Urls::CredReset)
-            hx-include="#token"
-            hx-target="#cred-reset-form" hx-select="#cred-reset-form"
-            hx-swap="outerHTML"
+            hx-get=""
+            hx-include="form"
+            hx-target="body"
             type="submit">
             Submit
         </button>
