--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -49,6 +49,9 @@
                 (% when CURegWarning::Unsatisfiable %)
                 An account policy conflict has occurred and you will not be able
                 to save your credentials.
+                (% when CURegWarning::WebauthnUserVerificationRequired %)
+                The passkey you attempted to register did not provide user verification. Please
+                ensure that you have a PIN or alternative configured on your authenticator.
                 (% endmatch %)
 
                 (% if is_danger %)
@@ -158,7 +161,7 @@
                                 type="submit"
                                 hx-post="/ui/api/cu_commit"
                                 hx-boost="false"
-                                (% if !warnings.is_empty() %)disabled(% endif
+                                (% if !can_commit %)disabled(% endif
                                 %)>Save Changes</button>
                         </span>
                     </div>
