--- a/server/core/templates/credentials_update_partial.html
+++ b/server/core/templates/credentials_update_partial.html
@@ -85,12 +85,14 @@
             (% when CUCredState::Modifiable %)
             (% include "credentials_update_passkeys.html" %)
             <!-- Here we are modifiable so we can render the button to add passkeys  -->
-            <button type="button" class="btn btn-primary"
-                hx-post="/ui/reset/add_passkey"
-                hx-vals='{"class": "Any"}'
-                hx-target="#credentialUpdateDynamicSection">
-                Add Passkey
-            </button>
+            <div class="mt-3">
+                <button type="button" class="btn btn-primary"
+                    hx-post="/ui/reset/add_passkey"
+                    hx-vals='{"class": "Any"}'
+                    hx-target="#credentialUpdateDynamicSection">
+                    Add Passkey
+                </button>
+            </div>
 
             (% when CUCredState::DeleteOnly %)
             (% if passkeys.len() > 0 %)
@@ -134,6 +136,55 @@
             (% when CUCredState::PolicyDeny %)
             (% endmatch %)
 
+            (% match sshkeys_state %)
+            (% when CUCredState::Modifiable %)
+            <hr class="my-4" />
+            <h4>SSH Keys</h4>
+            (% if sshkeys.len() > 0 %)
+            <p>This is a list of SSH keys associated with your account.</p>
+            <ul class="list-group">
+                (% for (keyname, sshkey) in sshkeys %)
+                <li class="list-group-item d-flex column-gap-3 py-3">
+                    <div>
+                        <img class="ssh-list-icon" src="/pkg/img/icons/key.svg" alt="" />
+                    </div>
+                    <div class="d-flex flex-column row-gap-2 flex-grow-1">
+                        <div class="d-flex justify-content-between">
+                            <div class="fw-bold column-gap-2">
+                                (( keyname ))<span class="badge rounded-pill text-bg-dark ms-2">(( sshkey.key_type.short_name ))</span>
+                            </div>
+                            <button class="btn btn-tiny btn-danger"
+                                hx-post="/ui/api/remove_ssh_publickey"
+                                hx-vals='{"name": "(( keyname ))"}'
+                                hx-target="#credentialUpdateDynamicSection">
+                                Remove
+                            </button>
+                        </div>
+                        <div><span class="font-monospace text-break">SHA256:(( sshkey.key ))</span></div>
+                        (% if let Some(comment) = sshkey.comment %)
+                            <div class="rounded bg-body-tertiary border border-light-subtle text-body-secondary px-2 py-1 align-self-stretch">Comment: (( comment ))</div>
+                        (% endif %)
+                    </div>
+                </li>
+                (% endfor %)
+            </ul>
+            (% else %)
+            <p>There are no SSH keys associated with your account.</p>
+            (% endif %)
+            <div class="mt-3">
+                <button class="btn btn-primary" type="button" 
+                    hx-post="/ui/reset/add_ssh_publickey"
+                    hx-target="#credentialUpdateDynamicSection">
+                    Add SSH Key
+                </button>
+            </div>
+            
+            (% when CUCredState::DeleteOnly %)
+            (% when CUCredState::AccessDeny %)
+            (% when CUCredState::PolicyDeny %)
+            (% endmatch %)
+
+
             <hr class="my-4" />
             <div id="cred-update-commit-bar" class="toast bs-emphasis-color bs-secondary-bg">
                 <div class="toast-body">
@@ -148,7 +199,7 @@
                             </svg>
                             <b>Careful</b> - Unsaved changes will be lost</div>
                     </span>
-                    <div class="mt-2 pt-2 border-top">
+                    <div class="mt-3 d-flex column-gap-2">
                         <button class="btn btn-danger"
                             hx-post="/ui/api/cu_cancel"
                             hx-boost="false"
